# comminative-archeologic-woodpecker-IP

./: DESCRIPTION  INSTALL  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: Rip-AllClass.R  Rip-AllGenerics.R  Rip-host.R  Rip-ip.R  Rip-ipv4.R  Rip-ipv6.R  Rip-utils.R  sysdata.rda
inst/doc/: ip-host.html  ip-intro.html
man/: Arith-methods.Rd  Bitwise-methods.Rd  Compare-methods.Rd  Conversion-methods.Rd  IP-package.Rd  hostinfo.Rd  ip-capabilities.Rd  ip-class.Rd  ipr-class.Rd  varia.Rd
src/: Makevars.in  Makevars.ucrt  Makevars.win  Rip-IP-macros.h  Rip-host-info.c  Rip-io-internal.c  Rip-itermacros.h  Rip-match.c  Rip-op-arith.c  Rip-op-bool.c  Rip-op-mask.c  Rip-register.c  Rip.c  Rip.h
src/templates/: Rip-bsearch-template.c  Rip-common-tables.c  Rip-input-body-template.c  Rip-input-iter-template.c  Rip-iter-template.c  Rip-register-routine.c
tools/: winlibs.R
vignettes/: ip-host.Rmd  ip-intro.Rmd
